--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -141,19 +141,16 @@ animations {
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
-# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
+	# https://wiki.hypr.land/Configuring/Dwindle-Layout/
+	
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
-master {
-    new_status = master
-}
-
-# https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
+	# https://wiki.hypr.land/Configuring/Variables/#misc
+	
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
@@ -190,7 +187,7 @@ bind = $mainMod, X, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, D, togglefloating,
 bind = $mainMod, F, fullscreen
-# bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $fileManager
 # bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
